# mcp-sqlite

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
mcp_sqlite/: server.py
tests/: conftest.py  test_canned_queries.py  test_catalog.py  test_execution.py  test_resources.py  test_server.py
